                         PHPCheckstyle Release Notes
                         ===========================

Version 0.9.3
-------------
* Refactoring of the indentation check (thanks to Charles Marion). The "noTabs" rule is replaced by the "indentation" rule.
* Reactivation of the "noSpaceAfterControlStmt" rule.
* Correction of a bug with multiple output files. 

Version 0.9.2
-------------
* Multiple output files (separated by a comma in the --format command line parameter)
  
Version 0.9.1
-------------
* Possibility to scan multiple source directories (separated by a comma in the --src command line parameter)
                        
Version 0.9
-------------
* Dependency on lib_xsl removed
* Documentation updated to link to the new project home (http://code.google.com/p/phpcheckstyle/)
* HTML Report validated with W3C validator, HTML characters escaped
* Possibility to suppress some warnings using annotations before a class or a function in the code (@SuppressWarnings)
* New logo

Version 0.8.11
-------------
* Refactoring : Added the current stack of instruction to provide contextual information
* New test : unusedCode
* New test : deprecated functions


Version 0.8.10
-------------
* Corrected JavaNCSS count of packages
* New test : functionInsideLoop

Version 0.8.9
-------------
* Corrected LevelOfNesting calculation
* New test : oneClassPerFile

Version 0.8.8
-------------
* New test : variableNaming
* Added the possibility to configure the regular expressions for the naming rules
* A taste of it's own dog food
                        
Version 0.8.7
-------------
* New test : checkUnusedVariables
* New test : checkUnusedFunctionParameters
      
Version 0.8.6
-------------
* Correction in the controlStructOpenCurly check.
      
Version 0.8.5
-------------  
 * New test : empty statement (;;)
 * New test : inner assignment
 * New test : unused private functions
      
Version 0.8.4
-------------